--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,13 @@
+
+project.ext.envConfigFiles = [
+  release: ".env",
+  dev: ".env",
+  stage: ".env",
+];
+
 apply plugin: "com.android.application"
+
+apply from: project(":react-native-config").projectDir.getPath() + "/dotenv.gradle"
 
 import com.android.build.OutputFile
 import org.apache.tools.ant.taskdefs.condition.Os
@@ -78,6 +87,7 @@ import org.apache.tools.ant.taskdefs.condition.Os
  * ]
  */
 
+
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
 project.ext.react = [
@@ -148,6 +158,7 @@ android {
         versionName "1.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
         missingDimensionStrategy 'react-native-camera', 'general'
+        resValue "string", "build_config_package", "com.lightningnfcapp"
 
         if (isNewArchitectureEnabled()) {
             // We configure the NDK build only if you decide to opt-in for the New Architecture.
