--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,7 @@ expo.webp.animated=false
 
 android.compileSdkVersion=31
 android.targetSdkVersion=31
+
+android.ndkVersion=25.0.8775105
+
+externalNativeBuild.cmake.version=3.18.1
