--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "run-android": "echo \"{\\\"commit\\\":\\\"`git rev-parse --short HEAD`\\\"}\" > gitinfo.json && npx react-native run-android"
   },
   "dependencies": {
+    "@haskkor/react-native-pincode": "^1.22.6",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -23,6 +25,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.6",
     "react-native-dialog": "^9.2.2",
+    "react-native-keychain": "^8.1.1",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.0",
     "react-native-qrcode-scanner": "^1.5.5",
