Initial code for ios to get the app running on iPhone

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,10 @@ target 'lightningnfcapp' do
   # if !ENV['CI']
   #   use_flipper!()
   # end
+  
+  permissions_path = '../node_modules/react-native-permissions/ios'
+
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
 
   post_install do |installer|
     react_native_post_install(installer)
