remove key checks before write

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -58,3 +58,13 @@ android.targetSdkVersion=31
 android.ndkVersion=25.0.8775105
 
 externalNativeBuild.cmake.version=3.18.1
+
+MYAPP_RELEASE_STORE_FILE=my-upload-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=onesandzeros-key
+MYAPP_RELEASE_STORE_PASSWORD=*WrolmAsluEg7
+MYAPP_RELEASE_KEY_PASSWORD=*WrolmAsluEg7
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=onesandzeros-key
+MYAPP_UPLOAD_STORE_PASSWORD=*WrolmAsluEg7
+MYAPP_UPLOAD_KEY_PASSWORD=*WrolmAsluEg7
