--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,19 @@
+
+project.ext.envConfigFiles = [
+  release: ".env",
+  dev: ".env",
+  stage: ".env",
+];
+
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+
+apply from: project(":react-native-config").projectDir.getPath() + "/dotenv.gradle"
+
+project.ext.vectoricons = [
+    iconFontNames: [ 'Ionicons.ttf' ] // Name of the font files you want to copy
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 import com.android.build.OutputFile
 
@@ -92,14 +106,14 @@ android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
-
+    
     namespace "com.lightningnfcapp"
     defaultConfig {
         applicationId "com.lightningnfcapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 21
+        versionName "0.1.7"
     }
 
     splits {
@@ -152,8 +166,20 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
-    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+    implementation('androidx.appcompat:appcompat:1.0.0')
+    implementation "com.google.firebase:firebase-core:17.2.2"
+    
+    implementation fileTree(dir: "libs", include: ["*.aar"])
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'commons-codec:commons-codec:1.13'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.56'
+    implementation "com.google.guava:guava:31.1-android"
 
+    implementation group: 'com.madgag.spongycastle', name: 'pkix', version: '1.54.0.0'
+    implementation group: 'com.madgag.spongycastle', name: 'prov', version: '1.54.0.0'
+    implementation group: 'com.madgag.spongycastle', name: 'core', version: '1.54.0.0'
+
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
