--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,16 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Uses feature - only show up in the store for devices that support NFC -->
   <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
   <uses-permission android:name="android.permission.INTERNET"/>
-  <!-- OPTIONAL PERMISSIONS, REMOVE WHATEVER YOU DO NOT NEED -->
-  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-  <uses-permission android:name="android.permission.VIBRATE"/>
-  <!-- These require runtime permissions on M -->
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.NFC" />
-  <!-- END OPTIONAL PERMISSIONS -->
+  <uses-permission android:name="android.permission.CAMERA" />
 
   <queries>
     <!-- Support checking for http(s) links via the Linking API -->
