--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-camera": "^4.2.1",
     "react-native-config": "^1.4.6",
     "react-native-dialog": "^9.2.2",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.0",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "0.17.7",
     "vision-camera-code-scanner": "^0.2.0"
