--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,3 +43,14 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 kotlinVersion=1.7.0
+
+
+MYAPP_RELEASE_STORE_FILE=my-upload-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=onesandzeros-key
+MYAPP_RELEASE_STORE_PASSWORD=*WrolmAsluEg7
+MYAPP_RELEASE_KEY_PASSWORD=*WrolmAsluEg7
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=onesandzeros-key
+MYAPP_UPLOAD_STORE_PASSWORD=*WrolmAsluEg7
+MYAPP_UPLOAD_KEY_PASSWORD=*WrolmAsluEg7
