--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.8",
     "react-native-config": "^1.4.6",
     "react-native-dialog": "^9.2.2",
+    "react-native-nfc-manager": "^3.14.5",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.6.0",
     "react-native-reanimated": "^2.17.0",
