--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@tradle/react-native-http": "^2.0.1",
     "assert": "^1.5.0",
     "browserify-zlib": "^0.1.4",
-    "buffer": "^4.9.2",
+    "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
+    "crc": "^4.3.2",
     "crypto-js": "^4.1.1",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.2.0",
