--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "postinstall": "rn-nodeify --install --hack",
+    "postinstall": "rn-nodeify --install buffer,process,stream,crypto,events --hack",
     "test": "jest",
     "commit-hash": "echo \"{\\\"commit\\\":\\\"`git rev-parse --short HEAD`\\\"}\" > gitinfo.json"
   },
@@ -16,51 +16,32 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@tradle/react-native-http": "^2.0.1",
-    "assert": "^1.5.0",
-    "browserify-zlib": "^0.1.4",
     "buffer": "^6.0.3",
-    "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
     "crc": "^4.3.2",
     "crypto-js": "^4.1.1",
-    "dns.js": "^1.0.1",
-    "domain-browser": "^1.2.0",
     "events": "^1.1.1",
-    "https-browserify": "0.0.1",
-    "path-browserify": "0.0.0",
     "process": "^0.11.10",
-    "punycode": "^1.4.1",
-    "querystring-es3": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-config": "^1.4.6",
     "react-native-crypto": "^2.2.0",
     "react-native-dialog": "^9.2.2",
-    "react-native-level-fs": "^3.0.1",
     "react-native-nfc-manager": "^3.14.5",
-    "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
     "react-native-permissions": "^3.8.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-tcp": "^3.3.2",
-    "react-native-udp": "^2.7.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^9.2.0",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "0.17.7",
-    "readable-stream": "^1.0.33",
+    "readable-stream": "^1.1.14",
     "stream-browserify": "^1.0.0",
-    "string_decoder": "^0.10.31",
-    "timers-browserify": "^1.4.2",
-    "tty-browserify": "0.0.0",
-    "url": "^0.10.3",
-    "util": "^0.10.4",
-    "vision-camera-code-scanner": "^0.2.0",
-    "vm-browserify": "0.0.4"
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
