--- a/ios/lightningnfcapp/Info.plist
+++ b/ios/lightningnfcapp/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>lightningnfcapp</string>
+	<string>Boltcard NFC Programmer</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconName</key>
